added memory & GC settings for running unit tests