@@ -192,6 +192,15 @@
                 </configuration>
             </plugin>
             
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx2048m -XX:PermSize=64m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC</argLine>
+                </configuration>
+            </plugin>
+            
+            
         </plugins>
     </build>
 
